--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ on: push
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
+    env:
+      BASE_URL: https://react-to-do-five-rho.vercel.app
     steps:
       - name: Checkout
         uses: actions/checkout@v6
